[1.2] UPDATE README.md